[tool.poetry]
name = "repl_python3_eggserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
discord = "^1.0.1"
html2text = "^2020.1.16"
opencv-python = "^4.5.2"
prettytable = "^2.1.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
